--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
+@import url("https://fonts.google.com/share?selection.family=DynaPuff:wght@400..700|Playwrite+DE+SAS:wght@100..400|Shantell+Sans:ital,wght@0,300..800;1,300..800");
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    font-family: "DynaPuff", "Shantell Sans", "Playwrite Deutschland Schulausgangschrift";
+}
