--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,9 @@
-@import url("https://fonts.google.com/share?selection.family=DynaPuff:wght@400..700|Playwrite+DE+SAS:wght@100..400|Shantell+Sans:ital,wght@0,300..800;1,300..800");
-
+@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
-    font-family: "DynaPuff", "Shantell Sans", "Playwrite Deutschland Schulausgangschrift";
+    font-family: "Shantell Sans", "cursive";
 }
