--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,22 @@
 * {
     font-family: "Lora", serif;
 }
+
+.preview-content h1 {
+    font-size: 2em;
+}
+.preview-content h2 {
+    font-size: 1.5em;
+}
+.preview-content h3 {
+    font-size: 1.17em;
+}
+.preview-content h4 {
+    font-size: 1em;
+}
+.preview-content h5 {
+    font-size: 0.83em;
+}
+.preview-content h6 {
+    font-size: 0.67em;
+}
