Change Navbar Footer and primary color in tailwind config

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap');
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
-    font-family: "Lora", serif;
+    font-family: serif;
 }
 
 .preview-content h1 {
